...
                        android:textSize="16sp" />
                    <TextView
                        android:id="@+id/start_truppfuehrer_druck"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
                        android:textSize="30sp" />
                    <TextView
                        android:id="@+id/start_truppmann_druck"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
                        android:textSize="30sp" />
                    <TextView
                        android:id="@+id/start_truppmann2_druck"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
                        android:textSize="16sp" />
                    <TextView
                        android:id="@+id/eindrittel_truppfuehrer_druck"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
                        android:textSize="30sp" />
                    <TextView
                        android:id="@+id/eindrittel_truppmann_druck"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
                        android:textSize="30sp" />
                    <TextView
                        android:id="@+id/eindrittel_truppmann2_druck"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
                        android:textSize="16sp" />
                    <TextView
                        android:id="@+id/zweidrittel_truppfuehrer_druck"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
                        android:textSize="30sp" />
                    <TextView
                        android:id="@+id/zweidrittel_truppmann_druck"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
                        android:textSize="30sp" />
                    <TextView
                        android:id="@+id/zweidrittel_truppmann2_druck"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
                        android:textSize="16sp" />
                    <TextView
                        android:id="@+id/ziel_druck_truppfuehrer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
                        android:textSize="30sp" />
                    <TextView
                        android:id="@+id/ziel_druck_truppmann"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
                        android:textSize="30sp" />
                    <TextView
                        android:id="@+id/ziel_druck_truppmann2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
                        android:textSize="16sp" />
                    <TextView
                        android:id="@+id/rueckzugist_druck_truppfuehrer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
                        android:textSize="30sp" />
                    <TextView
                        android:id="@+id/rueckzugist_druck_truppmann"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
                        android:textSize="30sp" />
                    <TextView
                        android:id="@+id/rueckzugist_druck_truppmann2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
                        android:textSize="16sp" />
                    <TextView
                        android:id="@+id/ende_druck_truppfuehrer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
...
